--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,6 +27,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - uses: goto-bus-stop/setup-zig@v2
       - name: Set up Go
         uses: actions/setup-go@v2
         with:
